Refactor: Implement Layered Architecture + Connect DB
