# model/product.go
@@ -1,8 +1,19 @@
 package model
 
 type Product struct {
-	ID    int    `json:"id"`
-	Name  string `json:"name"`
-	Price int    `json:"price"`
-	Stock int    `json:"stock"`
+	ID         int      `json:"id"`
+	Name       string   `json:"name"`
+	Price      int      `json:"price"`
+	Stock      int      `json:"stock"`
+	CategoryID int      `json:"category_id,omitempty"`
+	Category   Category `json:"category,omitempty"`
+}
+
+type ProductWithCategory struct {
+	ID           int    `json:"id"`
+	Name         string `json:"name"`
+	Price        int    `json:"price"`
+	Stock        int    `json:"stock"`
+	CategoryID   int    `json:"category_id"`
+	CategoryName string `json:"category_name"`
 }
